# tinyexr

./: CMakeLists.txt  tinyexr.h
cmake/: tinyEXRConfig.cmake.in
